--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Portfolio</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Style.css">
     </head>
     <body>
         <div class="main-container">
